# pushingkarma

./: .bowerrc  .eslintrc  .eslintrc.cjs  .eslintrc.json  .flake8  .gitignore  .jshintrc  .pylintrc  .tool-versions  CLAUDE.md  Dockerfile  README.md  apache.site.conf  bower.json  crontab.txt  deploy.sh  eslint.config.js  fabfile.py  gruntfile.js  gulpfile.js  index.html  jsconfig.json  makethemes.py  manage.py  notes.txt  npminstall.sh  package-lock.json  package.json  postactivate  pyproject.toml  requests.http  requirements.pip  urls.py  vite.config.js  vue.config.js  wsgi.py
ansible/: _certbot.yml  _django.yml  _nginx.yml  _redis.yml  _system.yml  _upload.yml  _uwsgi.yml  _vars.yml  inventory.ini  playbook.retry  playbook.yml
conf/: cron-dbbackup.sh  cron-letsencrypt.sh  crontab.txt  hosts  postactivate  pushingkarma-apache.conf  pushingkarma-nginx.conf  pushingkarma-uwsgi-django.ini  pushingkarma-uwsgi-web.ini  pushingkarma-uwsgi.ini  pushingkarma-uwsgiws.ini  pushingkarma.sublime-project  requirements.pip  tilix-cmd.sh  tilix-runserver.sh  tilix-session.json  uwsgi.conf  uwsgi.service
docker/: Dockerfile  crontab.conf  nginx.conf  supervisord.conf
env/: apache.site.conf  crontab.txt  dbbackup.sh  requirements.pip
environment/: postactivate  requirements.pip
pk/: __init__.py  api.py  asgi.py  dbbackup.sh  dbget.sh  manage.py  models.py  oauth-tokens.sqlite  requirements.pip  requirements.txt  schema.py  serializers.py  urls.py  views.py  wsgi.py  wsgi_django.py  wsgi_web.py  wsgiws.py
public/: index.html
scripts/: build-hljs-themes.py  build-hljsthemes.py  database-backup.py  (+2 more)
(+595 files in other folders)
