[project]
name = 'pushingkarma'
version = '3.0.0'
description = 'Code that runs pushingkarma.com'
requires-python = '>=3.12'

dependencies = [
    'pytz',
    'requests',
    'ofxtools',
    'django==5.2',
    'django-cors-headers==4.7.0',
    'django-ninja==1.4.0',
    'yfinance==0.2.54',
    'django_searchquery @ git+https://github.com/pkkid/django-searchquery.git'
]

[project.optional-dependencies]
dev = [
    'ipython'
]
