# Project Dependancies
[project]
name = 'pushingkarma'
version = '3.0.0'
description = 'Code that runs pushingkarma.com'
requires-python = '>=3.12'

dependencies = [
    'daphne',
    'ofxtools',
    'pytz',
    'requests',
    'yfinance',
    'exifread',
    'django==5.2.2',
    'django-cors-headers==4.7.0',
    'django-ninja==1.4.0',
    'django_searchquery @ git+https://github.com/pkkid/django-searchquery.git',
]

[project.optional-dependencies]
dev = [
    'fabric',
    'ipython',
    'keyring',
]
