# Project Dependancies
[project]
name = 'pushingkarma'
version = '3.0.0'
description = 'Code that runs pushingkarma.com'
requires-python = '>=3.12'

dependencies = [
    'daphne',
    'exifread',
    'ofxtools',
    'praw',
    'pytz',
    'requests',
    'yfinance',
    'django==5.2.6',
    'django-cors-headers==4.7.0',
    'django-ninja==1.4.0',
    'django_searchquery @ git+https://github.com/pkkid/django-searchquery.git',
]

[project.optional-dependencies]
dev = [
    'fabric',
    'ipython',
    'keyring',
]
